# gmail-ai-labeller

./: .envrc  .gitignore  LICENSE  README.md  _extracted_emails.csv  extracted_emails.csv  gmail_labeller.py  main.py  pyproject.toml  sklearn_email_model.pkl
backend/: .envrc  run.sh
gmail_ai_labeller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
