[project]
name = "gmail-ai-labeller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.159.0",
    "google-auth>=2.37.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "ipython>=8.31.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "typer>=0.15.1",
    "pandas>=2.2.3",
]
